docs/tests/nameres/control_flow/valid/ReturnExpr.src
// Valid

fn void main() {
    let int i = 0;
    return i++;
}