docs/tests/nameres/control_flow/invalid/ReturnOutOfScope.src
// Invalid 

fn void main() {
    if (1) {
        let int i = 0;
    }
    return i;
}